// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DonateButton /> component should match snapshot of dark theme 1`] = `
<DocumentFragment>
  <a
    class="donate-button"
    href="https://www.faithcomesbyhearing.com/donate/form/183"
    target="_blank"
  >
    <span
      class="donate-svg-wrapper"
    >
      <svg>
        <use
          xlink:href="/svglist.svg#donate_light"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span>
      Donate
    </span>
  </a>
</DocumentFragment>
`;

exports[`<DonateButton /> component should match snapshot of paper theme 1`] = `
<DocumentFragment>
  <a
    class="donate-button"
    href="https://www.faithcomesbyhearing.com/donate/form/183"
    target="_blank"
  >
    <span
      class="donate-svg-wrapper"
    >
      <svg>
        <use
          xlink:href="/svglist.svg#donate_dark"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span>
      Donate
    </span>
  </a>
</DocumentFragment>
`;

exports[`<DonateButton /> component should match snapshot of red theme 1`] = `
<DocumentFragment>
  <a
    class="donate-button"
    href="https://www.faithcomesbyhearing.com/donate/form/183"
    target="_blank"
  >
    <span
      class="donate-svg-wrapper"
    >
      <svg>
        <use
          xlink:href="/svglist.svg#donate_light"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span>
      Donate
    </span>
  </a>
</DocumentFragment>
`;
